--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -15,13 +15,13 @@ services:
 
     environment:
     
-#      PLATFORM: "DEV"
-#      LOG_LEVEL: 10
-#      HOST: "host.docker.internal"
-#      PORT: 3306
-#      DATABASE: "SSR"
-#      USER: "casops"
-#      PASSWORD: "copsaretops"
+      PLATFORM: "DEV"
+      LOG_LEVEL: 10
+      HOST: "host.docker.internal"
+      PORT: 3306
+      DATABASE: "SSR"
+      USER: "casops"
+      PASSWORD: "copsaretops"
 
 #      PLATFORM: "PROD"
 #      LOG_LEVEL: 10
@@ -31,13 +31,13 @@ services:
 #      USER: "system"
 #      PASSWORD: "up580ard"
 
-      PLATFORM: "NPD"
-      LOG_LEVEL: 10
-      HOST: "10.233.160.135"
-      PORT: 1521
-      DATABASE: "SSR"
-      USER: "system"
-      PASSWORD: "t3chn0l0gy"
+#      PLATFORM: "NPD"
+#      LOG_LEVEL: 10
+#      HOST: "10.233.160.135"
+#      PORT: 1521
+#      DATABASE: "SSR"
+#      USER: "system"
+#      PASSWORD: "t3chn0l0gy"
 
 
     healthcheck:
