--- a/scripts/harmonic_config_local.json
+++ b/scripts/harmonic_config_local.json
@@ -10,7 +10,7 @@
             "PCRPid": 1011,
             "ServiceId": "{D50E05E6-9C10-49BE-9F78-F8B8011D9726}",
             "ServiceNumber": 1001,
-            "Status": "Clear"
+            "Status": "Scramble"
         },
         {
             "Channel": 2,
@@ -21,7 +21,7 @@
             "PCRPid": 1021,
             "ServiceId": "{10AF9C37-4B72-41E1-B94C-AB9296F1635B}",
             "ServiceNumber": 1002,
-            "Status": "Clear"
+            "Status": "Scramble"
         },
         {
             "Channel": 3,
@@ -465,9 +465,20 @@
             "ID": "{B3105C8F-529E-40DE-9DD1-D10AA2900E3C}",
             "Name": "RAI Radio 1",
             "PCRPid": 502,
-            "ServiceId": "{014791A0-08DA-4C72-9086-C2AD5BFA2EF7}",
+            "ServiceId": "{E7AC7810-BAC2-4CDB-B3E3-8EE2773D6AE6}",
             "ServiceNumber": 4020,
-            "Status": "Clear"
+            "Status": "Scramble"
+        },
+        {
+            "Channel": 21,
+            "DeviceId": "{40277986-065C-4BC9-95E5-F1E6FB64D322}",
+            "Group": 4,
+            "ID": "{26A70D74-E9EB-42D8-9A33-972FAB84F53B}",
+            "Name": "Ant1 Radio",
+            "PCRPid": 512,
+            "ServiceId": "{BB91A5C0-1AED-4B1A-BA12-D125D72755F5}",
+            "ServiceNumber": 4021,
+            "Status": "Scramble"
         }
     ],
     [
@@ -799,6 +810,17 @@
         }
     ],
     [
+        {
+            "Channel": 3,
+            "DeviceId": "{57465E69-A82F-4427-B04D-C3A1042CC9FE}",
+            "Group": 11,
+            "ID": "{700B7ADD-B654-4143-AE77-C60C2DA9B6FF}",
+            "Name": "FoxSports506",
+            "PCRPid": 1031,
+            "ServiceId": "{9C52CE53-4745-4F86-A98E-0F7CEA85F47C}",
+            "ServiceNumber": 11003,
+            "Status": "Scramble"
+        },
         {
             "Channel": 4,
             "DeviceId": "{57465E69-A82F-4427-B04D-C3A1042CC9FE}",
@@ -1325,28 +1347,6 @@
             "ServiceId": "{9F5657E0-EA7E-4F47-8DBD-6C2F47EF8AEE}",
             "ServiceNumber": 16006,
             "Status": "Scramble"
-        },
-        {
-            "Channel": 7,
-            "DeviceId": "{40277986-065C-4BC9-95E5-F1E6FB64D322}",
-            "Group": 16,
-            "ID": "{E0F27098-B4DD-44D8-87B6-E64B46A63CA5}",
-            "Name": "Spare_16007",
-            "PCRPid": 8193,
-            "ServiceId": "{1CA5EF61-2BCC-4F53-AAB6-8DB0A190B8AD}",
-            "ServiceNumber": 16007,
-            "Status": "Clear"
-        },
-        {
-            "Channel": 8,
-            "DeviceId": "{40277986-065C-4BC9-95E5-F1E6FB64D322}",
-            "Group": 16,
-            "ID": "{6650103E-8E09-4B00-8F4E-EC18C3893E96}",
-            "Name": "Spare_16008",
-            "PCRPid": 8193,
-            "ServiceId": "{C5EE34CC-37FC-4189-B4FF-CF809B8CD766}",
-            "ServiceNumber": 16008,
-            "Status": "Clear"
         }
     ],
     [
@@ -1382,17 +1382,6 @@
             "ServiceId": "{E27B6695-CD58-4964-946B-241369EB0FD0}",
             "ServiceNumber": 17003,
             "Status": "Scramble"
-        },
-        {
-            "Channel": 4,
-            "DeviceId": "{57465E69-A82F-4427-B04D-C3A1042CC9FE}",
-            "Group": 17,
-            "ID": "{E25B7CB1-A7D0-4248-954F-6952BE2EF097}",
-            "Name": "Spare_17004",
-            "PCRPid": 8193,
-            "ServiceId": "{DFEFA019-F9A1-4D7A-B230-AD4733C5C5B0}",
-            "ServiceNumber": 17004,
-            "Status": "Clear"
         },
         {
             "Channel": 5,
@@ -1847,13 +1836,35 @@
     [
         {
             "Channel": 1,
+            "DeviceId": "{81EE451A-7BFF-462C-AC0F-EB2270A71E35}",
+            "Group": 23,
+            "ID": "{992C1E97-5675-4C9A-987C-BE537366CAD8}",
+            "Name": "FoxSports UHD 1",
+            "PCRPid": 8193,
+            "ServiceId": "{ADE3A970-E6A7-4A7A-BE3D-63E077F5E556}",
+            "ServiceNumber": 23001,
+            "Status": "Scramble"
+        },
+        {
+            "Channel": 1,
             "DeviceId": "{2DEE6077-13B0-41B9-BE0C-55E3A8C32C4D}",
             "Group": 23,
             "ID": "{992C1E97-5675-4C9A-987C-BE537366CAD8}",
             "Name": "FoxSports UHD 1",
-            "PCRPid": 1011,
+            "PCRPid": 8193,
             "ServiceId": "{ADE3A970-E6A7-4A7A-BE3D-63E077F5E556}",
             "ServiceNumber": 23001,
+            "Status": "Scramble"
+        },
+        {
+            "Channel": 2,
+            "DeviceId": "{81EE451A-7BFF-462C-AC0F-EB2270A71E35}",
+            "Group": 23,
+            "ID": "{8ECFA9AB-A576-4E6F-916E-FFF1FF1EB366}",
+            "Name": "4K ULTRA HD",
+            "PCRPid": 1021,
+            "ServiceId": "{EB1C54F0-448B-49C2-985A-E95DAE023342}",
+            "ServiceNumber": 23002,
             "Status": "Scramble"
         },
         {
@@ -1865,6 +1876,17 @@
             "PCRPid": 1021,
             "ServiceId": "{EB1C54F0-448B-49C2-985A-E95DAE023342}",
             "ServiceNumber": 23002,
+            "Status": "Scramble"
+        },
+        {
+            "Channel": 3,
+            "DeviceId": "{81EE451A-7BFF-462C-AC0F-EB2270A71E35}",
+            "Group": 23,
+            "ID": "{8047C32B-213D-42EE-A1AA-1104C3BFAFB3}",
+            "Name": "FoxSports UHD 2",
+            "PCRPid": 1031,
+            "ServiceId": "{FE53ADD5-032C-4B4C-8E3C-B05C661F608F}",
+            "ServiceNumber": 23003,
             "Status": "Scramble"
         },
         {
@@ -2254,91 +2276,13 @@
             "Status": "Scramble"
         }
     ],
-    [
-        {
-            "Channel": 1,
-            "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
-            "Group": 32,
-            "ID": "{0D611635-BF66-4D0E-ACD2-F230F279FDBC}",
-            "Name": "CGTN Doco",
-            "PCRPid": 1011,
-            "ServiceId": "{20E957F5-31C1-4B0B-8B0E-851CE0B29215}",
-            "ServiceNumber": 32001,
-            "Status": "Scramble"
-        },
-        {
-            "Channel": 2,
-            "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
-            "Group": 32,
-            "ID": "{F9748EE7-B003-4686-A866-C99B7BEF4192}",
-            "Name": "Daystar",
-            "PCRPid": 1021,
-            "ServiceId": "{13FAC20B-A8DB-41A6-8E2E-BD4DA6C7FB3D}",
-            "ServiceNumber": 32002,
-            "Status": "Scramble"
-        },
-        {
-            "Channel": 3,
-            "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
-            "Group": 32,
-            "ID": "{7A84A3A3-3431-4A17-8DC9-DE206B0B7506}",
-            "Name": "Sky Tbred HD",
-            "PCRPid": 1031,
-            "ServiceId": "{0A49D437-7A56-46EB-951C-811A5584C05F}",
-            "ServiceNumber": 32003,
-            "Status": "Scramble"
-        },
-        {
-            "Channel": 4,
-            "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
-            "Group": 32,
-            "ID": "{466D5409-78F5-400A-B315-4F1EACA01CA3}",
-            "Name": "TBN Inspire",
-            "PCRPid": 1041,
-            "ServiceId": "{309CCADC-3E8A-4CF5-9A3C-C89B46A32BA5}",
-            "ServiceNumber": 32004,
-            "Status": "Scramble"
-        },
-        {
-            "Channel": 7,
-            "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
-            "Group": 32,
-            "ID": "{625C7C05-0DC3-4DF2-BFC1-CA4F78424E1A}",
-            "Name": "SonLife",
-            "PCRPid": 1071,
-            "ServiceId": "{BBB4A4F1-CAFC-472E-8212-D1D3194DDB58}",
-            "ServiceNumber": 32007,
-            "Status": "Scramble"
-        },
-        {
-            "Channel": 9,
-            "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
-            "Group": 32,
-            "ID": "{9A15FE54-BB3C-4A89-BC1D-F6061CB78B90}",
-            "Name": "CGTN",
-            "PCRPid": 1091,
-            "ServiceId": "{25216A5D-FFD2-431B-9126-172FB64E060F}",
-            "ServiceNumber": 32009,
-            "Status": "Scramble"
-        },
-        {
-            "Channel": 12,
-            "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
-            "Group": 32,
-            "ID": "{E8224317-5EBC-4811-B698-37632C627F59}",
-            "Name": "Al Jazeera",
-            "PCRPid": 1121,
-            "ServiceId": "{2F781E5D-4BA8-498A-A19C-F7B056B898EC}",
-            "ServiceNumber": 32012,
-            "Status": "Clear"
-        }
-    ],
+    [],
     [
         {
             "Channel": 1,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{A95E4A6B-FD1E-42F1-8291-A5C58054D7F9}",
+            "ID": "{8E6F7740-3B74-4084-B426-AC379CC713CE}",
             "Name": "SBS Viceland",
             "PCRPid": 1011,
             "ServiceId": "{3B3B6408-E715-4CE4-9C68-DB6F3240071F}",
@@ -2349,7 +2293,7 @@
             "Channel": 2,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{84BD9347-F387-44EE-A408-912CA8EF839D}",
+            "ID": "{4D36947E-AFD3-49EE-9BF2-A151381EF0EB}",
             "Name": "SBS",
             "PCRPid": 1021,
             "ServiceId": "{F61F1F79-3B5D-46BD-97EF-1FC6FA62F9BF}",
@@ -2360,7 +2304,7 @@
             "Channel": 3,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{87A8F7FC-FAA6-4A5C-BB0A-62C468E8B40C}",
+            "ID": "{47A660E8-0D94-4676-81BA-8E499649C5CE}",
             "Name": "SBS Food",
             "PCRPid": 1031,
             "ServiceId": "{482922B5-F072-44B6-9C23-66E0CC33A69E}",
@@ -2371,7 +2315,7 @@
             "Channel": 4,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{74517F13-7E30-4893-BA99-9D266A082071}",
+            "ID": "{5AE15381-4C6D-4FD6-A718-4D5D5BF77306}",
             "Name": "NITV",
             "PCRPid": 1041,
             "ServiceId": "{B96F43C2-5383-4147-9624-23BC6C609439}",
@@ -2382,7 +2326,7 @@
             "Channel": 5,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{116FC5DE-2913-494D-8C30-AECF073B23C7}",
+            "ID": "{5701E750-CF17-4A69-B98E-180F71AA756D}",
             "Name": "SBS World Movies",
             "PCRPid": 1051,
             "ServiceId": "{A607BCA3-E630-4A4A-8C2E-4166314D6297}",
@@ -2393,7 +2337,7 @@
             "Channel": 6,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{3241337F-381A-4369-9518-6AD56FB3F2F7}",
+            "ID": "{9CB84200-57E4-438D-907A-DFB42E6B605A}",
             "Name": "SBS WorldWatch",
             "PCRPid": 1061,
             "ServiceId": "{ECD7C64C-D492-4423-A555-8931546F9E1A}",
@@ -2404,7 +2348,7 @@
             "Channel": 7,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{452BA33A-A925-405D-B1C8-3CE710414E34}",
+            "ID": "{291C0B74-5F9F-4333-B0C5-396E44A858A1}",
             "Name": "ABC TV",
             "PCRPid": 1071,
             "ServiceId": "{CB5601A6-F214-4A84-85A8-41788C4BE7B4}",
@@ -2415,7 +2359,7 @@
             "Channel": 8,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{1FA55EA8-C0B1-49A7-B17C-3731E442D047}",
+            "ID": "{2F6C0335-AA47-4B2C-BCB2-B2A0AA5B281A}",
             "Name": "ABCKids/TVPlus",
             "PCRPid": 1081,
             "ServiceId": "{CAF57EE1-ED2F-4D64-8028-6C1A3622BBF1}",
@@ -2426,7 +2370,7 @@
             "Channel": 9,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{B6A58C5E-425F-40B1-A335-22E0C909CE41}",
+            "ID": "{57AE3442-3656-4D71-902C-EAD667291331}",
             "Name": "ABC ME",
             "PCRPid": 1091,
             "ServiceId": "{A11E2599-6F1C-43E8-8D05-1419A78A6733}",
@@ -2437,7 +2381,7 @@
             "Channel": 10,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{E9B3F14E-4CD3-4AAC-9F02-DA7C00182C10}",
+            "ID": "{643F4EAF-78C7-4F6E-807E-E8772AF9D5DE}",
             "Name": "ABC TV",
             "PCRPid": 1101,
             "ServiceId": "{B2BC00D6-95FF-4676-B367-F00FC2388166}",
@@ -2448,7 +2392,7 @@
             "Channel": 11,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{4761CBDC-FCB9-49EC-AF41-AE75C8B56B91}",
+            "ID": "{0BFA6466-31CF-4A54-A186-3E30AAF5800E}",
             "Name": "ABC NEWS",
             "PCRPid": 1111,
             "ServiceId": "{67215D0F-6D53-4341-BDB2-54BFE25D27FE}",
@@ -2459,7 +2403,7 @@
             "Channel": 13,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{954A513D-14FB-43E6-B5A4-39A77EDA22BD}",
+            "ID": "{CC77C48D-F6E6-41CB-8609-BC2A722AE7F7}",
             "Name": "SBS Radio 1",
             "PCRPid": 1132,
             "ServiceId": "{A6401F4E-1A99-48BB-AC36-3690B9663F5E}",
@@ -2470,7 +2414,7 @@
             "Channel": 14,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{65EFD811-4AB0-4B2B-8AB5-96ACAD06152F}",
+            "ID": "{617495BC-92D7-4A2B-8A4E-EE1353579669}",
             "Name": "SBS Radio 2",
             "PCRPid": 1142,
             "ServiceId": "{549A8929-6A02-4570-8BAD-F99E9304490C}",
@@ -2481,7 +2425,7 @@
             "Channel": 15,
             "DeviceId": "{F9AE9C11-93C7-4B91-BFAE-FDAE0460206B}",
             "Group": 33,
-            "ID": "{560F6224-73E8-4D6B-AD42-EF86C36F9C19}",
+            "ID": "{FC4FF32F-9A3D-4E1E-9F6E-1D63D7E3EAA5}",
             "Name": "SBS Chill",
             "PCRPid": 1152,
             "ServiceId": "{5031CAF3-A9C8-4435-A703-8C5A48331A10}",
